# Ray-Image

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: poetry-build.yml
fic/: __init__.py  cli.py  fic.py
rayim/: rayim.py
